ARM64: dts: rk3399: gru: enable eDP display nodes
Change-Id: I1548fdebfb9bb3ac98e309a3becfa16216e94ede
Signed-off-by: Yakir Yang <ykk@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-gru.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-gru.dtsi
@@ -810,6 +810,30 @@ ap_i2c_audio: &i2c8 {
 	dr_mode = "host";	// TODO: needed?
 };
 
+&edp {
+	status = "okay";
+};
+
+&vopb {
+	status = "okay";
+};
+
+&vopb_mmu {
+	status = "okay";
+};
+
+&vopl {
+	status = "okay";
+};
+
+&vopl_mmu {
+	status = "okay";
+};
+
+&display_subsystem {
+	status = "okay";
+};
+
 /* PINCTRL: always below everything else */
 
 &pinctrl {
