Nintendo 3DS: Add initial RTC driver

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -323,6 +323,13 @@ config RTC_DRV_MAX77686
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-max77686.
 
+config RTC_DRV_NINTENDO3DS
+	tristate "Nintendo 3DS RTC driver"
+	depends on ARCH_NINTENDO3DS
+	help
+	  If you say yes here you get support for the RTC subsystem of the
+	  Nintendo 3DS.
+
 config RTC_DRV_RK808
 	tristate "Rockchip RK808 RTC"
 	depends on MFD_RK808
