--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -1218,6 +1218,11 @@
 			drive-strength = <12>;
 		};
 
+		pcfg_pull_none_13ma: pcfg-pull-none-13ma {
+			bias-disable;
+			drive-strength = <13>;
+		};
+
 		emmc {
 			emmc_pwr: emmc-pwr {
 				rockchip,pins =
@@ -1229,13 +1234,13 @@
 			rgmii_pins: rgmii-pins {
 				rockchip,pins =
 					/* mac_txclk */
-					<3 17 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 17 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_rxclk */
 					<3 14 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_mdio */
 					<3 13 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_txen */
-					<3 12 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 12 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_clk */
 					<3 11 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_rxdv */
@@ -1247,17 +1252,17 @@
 					/* mac_rxd0 */
 					<3 6 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_txd1 */
-					<3 5 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 5 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_txd0 */
-					<3 4 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 4 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_rxd3 */
 					<3 3 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_rxd2 */
 					<3 2 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_txd3 */
-					<3 1 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 1 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_txd2 */
-					<3 0 RK_FUNC_1 &pcfg_pull_none_12ma>;
+					<3 0 RK_FUNC_1 &pcfg_pull_none_13ma>;
 			};
 
 			rmii_pins: rmii-pins {
@@ -1265,7 +1270,7 @@
 					/* mac_mdio */
 					<3 13 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_txen */
-					<3 12 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 12 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_clk */
 					<3 11 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_rxer */
@@ -1279,9 +1284,9 @@
 					/* mac_rxd0 */
 					<3 6 RK_FUNC_1 &pcfg_pull_none>,
 					/* mac_txd1 */
-					<3 5 RK_FUNC_1 &pcfg_pull_none_12ma>,
+					<3 5 RK_FUNC_1 &pcfg_pull_none_13ma>,
 					/* mac_txd0 */
-					<3 4 RK_FUNC_1 &pcfg_pull_none_12ma>;
+					<3 4 RK_FUNC_1 &pcfg_pull_none_13ma>;
 			};
 		};
 
