--- a/arch/arm64/boot/dts/rockchip/rk3399.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399.dtsi
@@ -385,12 +385,10 @@
 		compatible = "rockchip,dwc3";
 		clocks = <&cru SCLK_USB3OTG0_REF>, <&cru SCLK_USB3OTG0_SUSPEND>,
 			 <&cru ACLK_USB3OTG0>, <&cru ACLK_USB3_RKSOC_AXI_PERF>,
-			 <&cru ACLK_USB3>, <&cru ACLK_USB3_NOC>,
-			 <&cru ACLK_USB3_GRF>;
+			 <&cru ACLK_USB3>, <&cru ACLK_USB3_GRF>;
 		clock-names = "clk_usb3otg0_ref", "clk_usb3otg0_suspend",
 			      "aclk_usb3otg0", "aclk_usb3_rksoc_axi_perf",
-			      "aclk_usb3", "aclk_usb3_noc",
-			      "aclk_usb3_grf";
+			      "aclk_usb3", "aclk_usb3_grf";
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
@@ -413,12 +411,10 @@
 		compatible = "rockchip,dwc3";
 		clocks = <&cru SCLK_USB3OTG1_REF>, <&cru SCLK_USB3OTG1_SUSPEND>,
 			 <&cru ACLK_USB3OTG1>, <&cru ACLK_USB3_RKSOC_AXI_PERF>,
-			 <&cru ACLK_USB3>, <&cru ACLK_USB3_NOC>,
-			 <&cru ACLK_USB3_GRF>;
+			 <&cru ACLK_USB3>, <&cru ACLK_USB3_GRF>;
 		clock-names = "clk_usb3otg1_ref", "clk_usb3otg1_suspend",
 			      "aclk_usb3otg1", "aclk_usb3_rksoc_axi_perf",
-			      "aclk_usb3", "aclk_usb3_noc",
-			      "aclk_usb3_grf";
+			      "aclk_usb3", "aclk_usb3_grf";
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
