--- a/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
@@ -522,4 +522,14 @@
 				<4 25 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
+
+	fusb30x {
+		fusb0_int: fusb0-int {
+			rockchip,pins = <1 2 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+
+		fusb1_int: fusb1-int {
+			rockchip,pins = <1 24 RK_FUNC_GPIO &pcfg_pull_up>;
+		};
+	};
 };
