--- a/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-chrome.dts
@@ -49,6 +49,18 @@
 
 	/delete-node/ vdd-log;
 	/delete-node/ vdd-center;
+
+	edp_panel: edp-panel {
+		compatible = "lg,lp097qx1-spa1", "panel-simple";
+		backlight = <&backlight>;
+		power-supply = <&vcc3v3_s0>;
+
+		ports {
+			panel_in_edp: endpoint {
+				remote-endpoint = <&edp_out_panel>;
+			};
+		};
+	};
 };
 
 &mipi_dsi {
@@ -58,6 +70,23 @@
 		reg = <0>;
 		backlight = <&backlight>;
 		status = "okay";
+	};
+};
+
+&edp {
+	status = "okay";
+
+	ports {
+		edp_out: port@1 {
+			reg = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			edp_out_panel: endpoint@0 {
+				reg = <0>;
+				remote-endpoint = <&panel_in_edp>;
+			};
+		};
 	};
 };
 
