--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -325,9 +325,9 @@ config RTC_DRV_MAX77686
 
 config RTC_DRV_NINTENDO3DS
 	tristate "Nintendo 3DS RTC driver"
-	depends on ARCH_NINTENDO3DS
+	depends on MFD_NINTENDO3DS_MCU
 	help
-	  If you say yes here you get support for the RTC subsystem of the
+	  If you say yes here you get support for the MCU RTC of the
 	  Nintendo 3DS.
 
 config RTC_DRV_RK808
