ARM64: dts: rockchip: Force pp3300_disp regulator to stay on
Normally, the display regulator would be kept powered on by the
display/backlight driver, but we don't yet have a DT representation or
driver for this, as the PWM is controlled by the EC. Just force the
regulator on for now.

This wasn't needed on some boards yet, since they were forcing this
regulator "on." But for those where we might be controlling it, we need
this. (And it's harmless otherwise.)

This is necessary but not sufficient for getting UI up on my board.

Change-Id: I30650c178dd42d76542f8f2491e22d9bf548363e
Signed-off-by: Brian Norris <briannorris@chromium.org>
Reviewed-on: https://chrome-internal-review.googlesource.com/254935
Commit-Queue: Brian Norris <briannorris@google.com>
Tested-by: Brian Norris <briannorris@google.com>
Reviewed-by: Stephen Barber <smbarber@google.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-gru.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-gru.dtsi
@@ -433,6 +433,12 @@
 		pinctrl-0 = <&pp3300_disp_en>;
 
 		enable-active-high;
+
+		// TODO: for bringup; we should reference (and enable) this
+		// regulator with a panel (?) or backlight (?) driver
+		regulator-always-on;
+		regulator-boot-on;
+
 		gpio = <&gpio4 27 GPIO_ACTIVE_HIGH>;
 
 		vin-supply = <&pp3300>;
