ARM64: dts: rk3399: rename dts files
Rename the rk3399 dts files:
    rk3399-monkey.dts -> rk3399-evb1-android.dts
    rk3399-chrome.dts -> rk3399-evb1-cros.dts
    rk3399-tb.dtsi -> rk3399-evb.dtsi

Change-Id: Ie1f61d63b8fefc263a64d713d70947ceee8472c5
Signed-off-by: Jianqun Xu <jay.xu@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-evb.dtsi
@@ -44,7 +44,7 @@
 #include "rk3399.dtsi"
 
 / {
-	compatible = "rockchip,tb", "rockchip,rk3399";
+	compatible = "rockchip,evb", "rockchip,rk3399";
 
 	vdd_log: vdd-log {
 		compatible = "pwm-regulator";
