--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -2,11 +2,11 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3366-fpga.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3366-tb.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3368-r88.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3368-tb-sheep.dtb
-dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-chrome.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-evb1-android.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-evb1-cros.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-fpga.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-gru-gru.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-gru-kevin.dtb
-dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-monkey.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
