--- a/arch/arm64/boot/dts/rockchip/rk3399-fb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-fb.dtsi
@@ -40,6 +40,7 @@
  *     OTHER DEALINGS IN THE SOFTWARE.
  */
 #include <dt-bindings/display/rk_fb.h>
+#include <dt-bindings/display/mipi_dsi.h>
 
 / {
 	vpu: vpu_service@ff650000 {
