ARM64: dts: rockchip: rk3366: assign parent for gpu and wifi.
Gpu's 480MHz need to select usbphy_480m as parent.
The jitter will be lower, if sclk_wifidsp is supplied by pll_wifi.

Change-Id: I13e5077d55ab80e5224bac36b469e39d556bd347
Signed-off-by: Finley Xiao <finley.xiao@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3366-tb.dts
@@ -814,6 +814,8 @@
 	reset-names = "otg_ahb", "otg_phy", "otg_controller";
 	/* 0 - Normal, 1 - Force Host, 2 - Force Device */
 	rockchip,usb-mode = <0>;
+	assigned-clocks = <&cru SCLK_USBPHY480M>;
+	assigned-clock-parents = <&usbphy0>;
 	status = "okay";
 };
 
