arm64: dts: rk3399: add device node for loader display
Change-Id: I11e144fa8c7c0dfae70a03c23e392cebc6303177
Signed-off-by: Mark Yao <mark.yao@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-android-next.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-android-next.dtsi
@@ -194,6 +194,20 @@
 
 &display_subsystem {
 	status = "okay";
+
+	route {
+		route0 {
+			logo,uboot = "logo.bmp";
+			logo,kernel = "logo_kernel.bmp";
+			connect = <&vopb_out_mipi>;
+		};
+
+		route1 {
+			logo,uboot = "logo.bmp";
+			logo,kernel = "logo_kernel.bmp";
+			connect = <&vopl_out_hdmi>;
+		};
+	};
 };
 
 &i2s2 {
