arm64: rockchip_defconfig: add rk818 charge config
Change-Id: Ib339cfae1035f36d81d64907f4b034bc387f85b3
Signed-off-by: Bin Yang <yangbin@rock-chips.com>

--- a/arch/arm64/configs/rockchip_defconfig
+++ b/arch/arm64/configs/rockchip_defconfig
@@ -328,6 +328,8 @@ CONFIG_SPI_ROCKCHIP=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_TEST_POWER=y
+CONFIG_BATTERY_RK818=y
+CONFIG_CHARGER_RK818=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_POWER_AVS=y
